--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,44 +8,79 @@
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
     <header>
         <p>Travelia</p>
-        <div></div>
+        <div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
     </header>
     <main>
         <article>
-            <img src="./img/tours.png" alt="tours">
-            <h1>TOURS</h1>
-            <p>Our extensive knowledge allows us to curate the perfect blend of activities and services, transforming your journey into a tapestry of memorablo adventures.</p>
-        </article>
-        <article>
-            <img src="./img/hikking.png" alt="hikking">
-            <h1>HIKKING</h1>
-            <p>Each journey may begin with a single step, but some require a few more steps than others.</p>
-        </article>
-        <article>
-        <img src="./img/travel.png" alt="travel">
-            <h1>HIKKING</h1>
-            <p>We make booking and managing flights easy for business travel, but it also gives your team access to exclusive corporate rates and discounts.</p>
-        </article>
-        <article>
-            <img src="./img/support.png" alt="support">
+            <article>
+                <img src="./img/tours.png" alt="tours">
+                <h1>TOURS</h1>
+                <p>Our extensive knowledge allows us to curate the perfect blend of activities and services,
+                    transforming your journey into a tapestry of memorablo adventures.</p>
+            </article>
+            <article>
+                <img src="./img/hikking.png" alt="hikking">
+                <h1>HIKKING</h1>
+                <p>Each journey may begin with a single step, but some require a few more steps than others.</p>
+            </article>
+            <article>
+                <img src="./img/travel.png" alt="travel">
+                <h1>TRAVEL</h1>
+                <p>We make booking and managing flights easy for business travel, but it also gives your team access to
+                    exclusive corporate rates and discounts.</p>
+            </article>
+            <article>
+                <img src="./img/support.png" alt="support">
                 <h1>SUPPORT</h1>
                 <p>You can choose from a wide range of support options to contact us.</p>
             </article>
-    </main>
-    <img src="./img/sassolungo-mountain-italy.jpg" alt="sassolungo">
-    <form action="" method="get">
+        </article>
+        <img src="./img/sassolungo-mountain-italy.jpg" alt="sassolungo">
+        <article>
+            <form action="" method="get">
+                <h1>CONTCACT US</h1>
+                <input type="text" name="name" id="name" placeholder="Enter your name">
 
-    </form>
+                <input type="text" name="mail" id="mail" placeholder="Enter your email">
+
+                <label for="age">Age</label>
+                <input type="number" name="age" id="age">
+
+                <label for="gender" id="gender"><b>Gender</b></label>
+
+                <input type="radio" name="gender" id="male" value="male">
+                <label for="gender">Male</label>
+                <input type="radio" name="gender" id="female" value="female">
+                <label for="gender">Female</label>
+                <input type="radio" name="gender" id="nonBinary" value="Non binary">
+                <label for="gender">Non Binary</label>
+
+                <label for="comments" id="commentsLabel">Comments</label>
+
+                <textarea name="comments" id="comments" cols="30" rows="10"></textarea>
+
+                <input type="button" value="SUBMIT">
+            </form>
+        </article>
+    </main>
     <footer>
         <img src="./img/telegram.png" alt="telegram">
         <img src="./img/instagram.png" alt="instagram">
         <img src="./img/youtube.png" alt="youtube">
         <img src="./img/tiktok.png" alt="tiktok">
-        <p>Images by rowpixel.com, juicy_fish and wirestock on <a href="https://www.freepik.es/" target="_blank">Freepik</a></p>
+        <p>Images by rowpixel.com, juicy_fish and wirestock on <a href="https://www.freepik.es/"
+                target="_blank">Freepik</a></p>
         <p>© 2023 Daniel Portasany Codina</p>
     </footer>
 </body>
+
 </html>
